<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/addBlogHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/addBlog"
            android:textColor="@color/colorPrimaryText"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvCoverPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_cover_picture"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnAddImage"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toTopOf="@+id/btnAddImage"
            app:layout_constraintVertical_bias="0.586" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_attach_file_black_24dp"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/addBlogHeading"
            app:rippleColor="@android:color/white"
            app:tint="@android:color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/title"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddImage">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/description"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnVoiceToText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_mic_black_24dp"
                app:fabSize="mini"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/addBlogHeading"
                app:rippleColor="@android:color/white"
                app:tint="@android:color/white" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinnerCategory"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:editable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnPublishBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/publish"
            android:textAllCaps="true"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCategory"
            app:layout_constraintStart_toStartOf="@+id/spinnerCategory"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />
            
            <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/btnPublishBlog"
            app:layout_constraintStart_toStartOf="@+id/btnPublishBlog"
            app:layout_constraintTop_toBottomOf="@id/btnPublishBlog"
            android:visibility="invisible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
